--- a/src/main/webapp/editartareas.xhtml
+++ b/src/main/webapp/editartareas.xhtml
@@ -14,10 +14,11 @@
 	<!-- BANNER -->
 	<header>
 		<!-- MENU PRINCIPAL -->
-	<b:navBar class="menup" brandHref="#"
-			inverse="true"
+		<b:navBar class="menup" brandHref="#" inverse="true"
 			style="padding-top:2px;padding-bottom:2px;margin-bottom:0px;background:#226BCB;color:white;
-			border-color:#226BCB;" fixed="top"><img src="img/studaylogo2.png" width="120"/>
+			border-color:#226BCB;"
+			fixed="top">
+			<img src="img/studaylogo2.png" width="120" />
 			<b:navbarLinks pull="right">
 				<b:navLink value="    " href="#"></b:navLink>
 			</b:navbarLinks>
@@ -34,7 +35,8 @@
 				<h1>Tareas</h1>
 				<p>Administra tu vida académica de la mejor manera.</p>
 				<p>
-					<a href="http://localhost:8081/jsf/PresentPage.html" target="_blank" class="btn btn-primary btn-lg">Saber Más</a>
+					<a href="http://localhost:8081/jsf/PresentPage.html"
+						target="_blank" class="btn btn-primary btn-lg">Saber Más</a>
 				</p>
 			</div>
 		</b:jumbotron>
@@ -67,8 +69,7 @@
 		<b:form>
 			<b:container layout="fluid">
 				<b:panelGrid colSpans="6,6">
-					<b:panel title="EDITAR TAREAS"  look="info"
-						showCollapseLink="true">
+					<b:panel title="EDITAR TAREAS" look="info" showCollapseLink="true">
 						<b:row>
 							<b:column medium-screen="4">
 								<p:outputLabel value="Asignatura" />
@@ -156,9 +157,10 @@
 		</b:form>
 
 	</b:panel>
-<footer class="sticky-bottom" style="background: #000;">
-		<p class="text-light text-center" style="color:white;padding-top:40px;padding-bottom:40px;">(c) 2019 StuDay Agenda. Todos
-			los derechos reservados.</p>
+	<footer class="sticky-bottom" style="background: #000;">
+		<p class="text-light text-center"
+			style="color: white; padding-top: 40px; padding-bottom: 40px;">(c)
+			2019 StuDay Agenda. Todos los derechos reservados.</p>
 	</footer>
 
 </h:body>
