--- a/src/main/webapp/indexasignaturas.xhtml
+++ b/src/main/webapp/indexasignaturas.xhtml
@@ -2,23 +2,23 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:b="http://bootsfaces.net/ui" 
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<meta charset="utf-8" name="viewport"
 		content="width=device-width, initial-scale=1"
 		http-equiv="X-UA-Conpatible" />
-	<title>Asignatura - Index</title>
+	<title>Asignatura</title>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 </h:head>
 <h:body>
-		<!-- BANNER -->
+	<!-- BANNER -->
 	<header>
-	<!-- MENU PRINCIPAL -->
-	<b:navBar class="menup" brandHref="#"
-			inverse="true"
+		<!-- MENU PRINCIPAL -->
+		<b:navBar class="menup" brandHref="#" inverse="true"
 			style="padding-top:2px;padding-bottom:2px;margin-bottom:0px;background:#226BCB;color:white;
-			border-color:#226BCB;" fixed="top"><img src="img/studaylogo2.png" width="120"/>
+			border-color:#226BCB;"
+			fixed="top">
+			<img src="img/studaylogo2.png" width="120" />
 			<b:navbarLinks pull="right">
 				<b:navLink value="    " href="#"></b:navLink>
 			</b:navbarLinks>
@@ -28,13 +28,15 @@
 				</b:dropMenu>
 			</b:navbarLinks>
 		</b:navBar>
-	<!--  -->
-		<b:jumbotron class="jumbotron" style="padding-top:60px;padding-bottom:20px;background-image: url('img/wallpaper7.jpg');background-repeat: no-repeat;background-size: cover;">
+		<!--  -->
+		<b:jumbotron class="jumbotron"
+			style="padding-top:60px;padding-bottom:20px;background-image: url('img/wallpaper7.jpg');background-repeat: no-repeat;background-size: cover;">
 			<div class="container">
 				<h1>Asignatura</h1>
 				<p>Administra tu vida académica de la mejor manera.</p>
 				<p>
-					<a href="http://localhost:8081/jsf/PresentPage.html" target="_blank" class="btn btn-primary btn-lg">Saber Más</a>
+					<a href="http://localhost:8081/jsf/PresentPage.html"
+						target="_blank" class="btn btn-primary btn-lg">Saber Más</a>
 				</p>
 			</div>
 		</b:jumbotron>
@@ -62,65 +64,68 @@
 		<h2>
 			<h:outputText value="Lista de Asignaturas"></h:outputText>
 		</h2>
-		<h:form>
-			<b:dataTable value="#{asignaturaBean.arrayList}" var="asignatura"
-				border="1">
-				<b:dataTableColumn>
-					<f:facet name="header">NRC</f:facet>
-					<h:outputText value="#{asignatura.NRC_ASIGNATURA}"></h:outputText>
-				</b:dataTableColumn>
-				<b:dataTableColumn>
-					<f:facet name="header">Nombre Asignatura</f:facet>
-					<h:outputText value="#{asignatura.NOMBRE_ASIGNATURA}"></h:outputText>
-				</b:dataTableColumn>
-				<b:dataTableColumn>
-					<f:facet name="header">Aula o Salon</f:facet>
-					<h:outputText value="#{asignatura.AULA_ASIGNATURA}"></h:outputText>
-				</b:dataTableColumn>
-				<b:dataTableColumn>
-					<f:facet name="header">Hora Entrada</f:facet>
-					<h:outputText value="#{asignatura.HORAENTRADA_ASIGNATURA}"></h:outputText>
-				</b:dataTableColumn>
-				<b:dataTableColumn>
-					<f:facet name="header">Hora Salida</f:facet>
-					<h:outputText value="#{asignatura.HORASALIDA_ASIGNATURA}"></h:outputText>
-				</b:dataTableColumn>
-				<b:dataTableColumn>
-					<f:facet name="header">Dia</f:facet>
-					<h:outputText value="#{asignatura.DIAS_ASIGNATURA}"></h:outputText>
-				</b:dataTableColumn>
-				<b:dataTableColumn>
-					<f:facet name="header">Editar</f:facet>
-					<b:commandButton
-						action="#{asignaturaBean.editar(asignatura.NRC_ASIGNATURA)}"
-						value="Editar" ajax="true" update="@none" look="warning"
-						 iconAwesome="fa-pencil"></b:commandButton>
-				</b:dataTableColumn>
-				<b:dataTableColumn>
-					<f:facet name="header">Eliminar</f:facet>
-					<b:commandButton
-						action="#{asignaturaBean.eliminar(asignatura.NRC_ASIGNATURA)}"
-						value="Eliminar" ajax="true" update="@none" look="danger"
-						iconAwesome="fa-trash">
-						<p:confirm header="Confirmación" message="¿Estás seguro?"
-							icon="pi pi-exclamation-triangle" />
-					</b:commandButton>
-					<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-						<p:commandButton value="Si" type="button"
-							styleClass="ui-confirmdialog-yes" icon="pi pi-check" />
-						<p:commandButton value="No" type="button"
-							styleClass="ui-confirmdialog-no" icon="pi pi-times" />
-					</p:confirmDialog>
-				</b:dataTableColumn>
-			</b:dataTable>
-			<b:commandButton action="#{asignaturaBean.PaginaAdd()}"
-				value="Agregar" ajax="true" update="@none" look="primary"
-				 iconAwesome="fa-plus"></b:commandButton>
-		</h:form>
+		<b:panel look="primary">
+			<h:form>
+				<b:dataTable value="#{asignaturaBean.arrayList}" var="asignatura"
+					border="1">
+					<b:dataTableColumn>
+						<f:facet name="header">NRC</f:facet>
+						<h:outputText value="#{asignatura.NRC_ASIGNATURA}"></h:outputText>
+					</b:dataTableColumn>
+					<b:dataTableColumn>
+						<f:facet name="header">Nombre Asignatura</f:facet>
+						<h:outputText value="#{asignatura.NOMBRE_ASIGNATURA}"></h:outputText>
+					</b:dataTableColumn>
+					<b:dataTableColumn>
+						<f:facet name="header">Aula o Salon</f:facet>
+						<h:outputText value="#{asignatura.AULA_ASIGNATURA}"></h:outputText>
+					</b:dataTableColumn>
+					<b:dataTableColumn>
+						<f:facet name="header">Hora Entrada</f:facet>
+						<h:outputText value="#{asignatura.HORAENTRADA_ASIGNATURA}"></h:outputText>
+					</b:dataTableColumn>
+					<b:dataTableColumn>
+						<f:facet name="header">Hora Salida</f:facet>
+						<h:outputText value="#{asignatura.HORASALIDA_ASIGNATURA}"></h:outputText>
+					</b:dataTableColumn>
+					<b:dataTableColumn>
+						<f:facet name="header">Dia</f:facet>
+						<h:outputText value="#{asignatura.DIAS_ASIGNATURA}"></h:outputText>
+					</b:dataTableColumn>
+					<b:dataTableColumn>
+						<f:facet name="header">Editar</f:facet>
+						<b:commandButton
+							action="#{asignaturaBean.editar(asignatura.NRC_ASIGNATURA)}"
+							value="Editar" ajax="true" update="@none" look="warning"
+							iconAwesome="fa-pencil"></b:commandButton>
+					</b:dataTableColumn>
+					<b:dataTableColumn>
+						<f:facet name="header">Eliminar</f:facet>
+						<b:commandButton
+							action="#{asignaturaBean.eliminar(asignatura.NRC_ASIGNATURA)}"
+							value="Eliminar" ajax="true" update="@none" look="danger"
+							iconAwesome="fa-trash">
+							<p:confirm header="Confirmación" message="¿Estás seguro?"
+								icon="pi pi-exclamation-triangle" />
+						</b:commandButton>
+						<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+							<p:commandButton value="Si" type="button"
+								styleClass="ui-confirmdialog-yes" icon="pi pi-check" />
+							<p:commandButton value="No" type="button"
+								styleClass="ui-confirmdialog-no" icon="pi pi-times" />
+						</p:confirmDialog>
+					</b:dataTableColumn>
+				</b:dataTable>
+				<b:commandButton action="#{asignaturaBean.PaginaAdd()}"
+					value="Agregar" ajax="true" update="@none" look="primary"
+					iconAwesome="fa-plus"></b:commandButton>
+			</h:form>
+		</b:panel>
 	</div>
 	<footer class="sticky-bottom" style="background: #000;">
-		<p class="text-light text-center" style="color:white;padding-top:40px;padding-bottom:40px;">(c) 2019 StuDay Agenda. Todos
-			los derechos reservados.</p>
+		<p class="text-light text-center"
+			style="color: white; padding-top: 40px; padding-bottom: 40px;">(c)
+			2019 StuDay Agenda. Todos los derechos reservados.</p>
 	</footer>
 </h:body>
 </html>
