--- a/src/main/webapp/PresentPage.html
+++ b/src/main/webapp/PresentPage.html
@@ -75,12 +75,12 @@
           </div>
           <div class="w-100">
           </div>
-          <div class="col" id="imagen1">
+          <div class="col" id="imagen11">
           </div>
           <div class="col mt-auto mb-auto">
             <div class="elemento2 ml-5 mr-5">
               <h1>Agenda</h1>
-              <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="text-justify">La Agenda integra paneles en los cuales  se muestran las tareas pendientes segun la fecha registrada en los mismos y el día lo cual permitira un mejor control de lo el estudiante tiene que hacer en la semana.</p>
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
           </div>
           <div class="col-md-6" id="nosotros-text">
 
-              <a href="http://localhost:8081/jsf/index.jsf" class="btn mt-5" id="btn-banner"><i class="fa fa-check-square"></i> Iniciar <strong>StuDay</strong></a>
+              <a href="http://localhost:8080/jsf/login.jsf" class="btn mt-5" id="btn-banner"><i class="fa fa-check-square"></i> Iniciar <strong>StuDay</strong></a>
             </div>
           </div>
         </div>
